objects/GenAIGatewayRequest__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_gatewayRequestId__c</fullName>
        <label>KQ_gatewayRequestId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appType__c</fullName>
        <label>appType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>botVersionId__c</fullName>
        <label>botVersionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completionTokens__c</fullName>
        <label>completionTokens</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enableInputSafetyScoring__c</fullName>
        <label>enableInputSafetyScoring</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enableOutputSafetyScoring__c</fullName>
        <label>enableOutputSafetyScoring</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enablePiiMasking__c</fullName>
        <label>enablePiiMasking</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>frequencyPenalty__c</fullName>
        <label>frequencyPenalty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gatewayRequestId__c</fullName>
        <label>gatewayRequestId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationGroupId__c</fullName>
        <label>generationGroupId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maskedPrompt__c</fullName>
        <label>maskedPrompt</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <label>model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numGenerations__c</fullName>
        <label>numGenerations</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parameters__c</fullName>
        <label>parameters</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerId__c</fullName>
        <label>plannerId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>presencePenalty__c</fullName>
        <label>presencePenalty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>promptTemplateDevName__c</fullName>
        <label>promptTemplateDevName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promptTemplateVersionNo__c</fullName>
        <label>promptTemplateVersionNo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promptTokens__c</fullName>
        <label>promptTokens</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prompt__c</fullName>
        <label>prompt</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provider__c</fullName>
        <label>provider</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sessionId__c</fullName>
        <label>sessionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stopSequences__c</fullName>
        <label>stopSequences</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperature__c</fullName>
        <label>temperature</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totalTokens__c</fullName>
        <label>totalTokens</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>userId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>